# APT-interface

./: .gitignore  README.md  config.yaml  config_KPZ.yaml  config_KSG.yaml  identify_devices.py  kpz101_identify.py  kpz101_test.py  ksg101_test.py  pyproject.toml  scan.yaml  scan_test.py  schema_KSG.json  test.py  test_serpentin.py  y.yaml
.github/workflows/: publish-to-test-pypi.yml  python-publish.yml
apt_interface/: KPZ101.py  KSG101.py  __init__.py  device.py  scan.py
json_schema/: schema_KPZ.json  schema_scan.json
rules/: 11-ftdi.rules
tests/: config_KPZ.yaml  config_KSG.yaml  generic_device.py  identify_devices.py  kpz101_test.py  ksg101_test.py  prompt_pos_closed_loop.py  scan.yaml  scan_simulation.py  scanning.py  serpentin_test.py  simulation.py  x.yaml  y.yaml  z.yaml
