[tool.poetry]
name = "apt-interface"
version = "0.1.0"
description = ""
authors = ["Benoit <benoitleroux41@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyftdi = "^0.55.0"
pydantic = "^2.5.3"
pydantic-yaml = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
